just solve some bugs

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   --accent-green: #00ff88;
   --accent-light: #ffc9f6;
 
-  --text-primary: #ffffff;
+  --text-primary: #e0e0e0;
   --text-secondary: #cccccc;
   --danger: #ff4757;
   --warning: #ffa502;
@@ -25,7 +25,6 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-
   font-family: "Inter", sans-serif;
   color: var(--text-primary);
   background: linear-gradient(145deg, var(--primary-bg), #0d0d0d);
@@ -189,23 +188,17 @@ body.blur-bg {
 
 /* Editable Task Area */
 #task-container {
-  flex: 1;
-  height: calc(100vh - 42px); /* Fill remaining space after topbar */
-  width: 100%;
+  height:100%; /* Fill remaining space after topbar */
+  width: 330px;
   overflow-y: auto;
   overflow-x: hidden;
-
   font-size: 15px;
   font-family: inherit;
-  line-height: 1.6;
-
-  padding: 0 12px;
   background: transparent;
   outline: none;
   border: none;
-
   white-space: pre-wrap;
-  word-wrap: break-word;
+  padding: 2px 14px ;
   -webkit-app-region: no-drag;
 }
 
